修改了启动脚本